--- a/component/theme/file_theme/static/style.css
+++ b/component/theme/file_theme/static/style.css
@@ -2,9 +2,9 @@
 Theme Name: 	!######!
 Description: 	Responsive WordPress Theme on Bootstrap.
 Version:     	1.0.0
-Author:     	Edoardo Monti
-Author URI:		http://www.bwebinformatica.com
-Site:			http://www.bwebinformatica.com/bcomponent
+Author:     	Edoardo Monti (Bweb)
+Author URI:		https://www.bwebagency.it/
+Site:			https://github.com/EdoardoDevelop/bweb_component/
 Text Domain: 	bcomponent
 Tags:        	grid-layout, blog, custom-menu, featured-images, right-sidebar
 */
