--- a/component/light_theme_admin/b_admin.css
+++ b/component/light_theme_admin/b_admin.css
@@ -403,6 +403,7 @@ body {
   #wpadminbar > #wp-toolbar span.ab-label,
   #wpadminbar > #wp-toolbar span.noticon {
     color: #3b4b5d;
+    overflow: hidden;
   }
   
   #wpadminbar .ab-icon,
