--- a/component/custom_dashboard/assets/style.css
+++ b/component/custom_dashboard/assets/style.css
@@ -64,11 +64,25 @@
     width: 5px;
     height: 12px;
     display: inline-block;
+    transition: all 0.1s ease-in-out;
+}
+
+.box_icons-state-accept{
+    width: 25px;
+    border: 2px dashed rgb(26, 205, 6);
+    display: inline-block;
+    font-size: 28px;
 }
 .box_icons-state-active{
     width: 25px;
-    border: 1px solid rgb(205, 6, 6);
+    border: 2px dashed rgb(23, 6, 205);
     display: inline-block;
+}
+
+.ui-sortable-highlight{
+    border: 1px dashed rgb(26, 205, 6);
+    min-height: 30px;
+    min-width: 20%;
 }
 
 #trash_dash .dashicons{
@@ -78,6 +92,19 @@
 }
 .select_dashicons .dashicons{
     margin: 5px;
+    cursor: move;
+    transition: all 0.1s ease-in-out;
+}
+
+.select_dashicons .dashicons.ui-draggable-dragging{
+    transition: all 0s ease-in-out;
+}
+
+.select_dashicons .dashicons:hover{
+    color: rgb(26, 205, 6);
+    position: absolute;
+    font-size: 42px;
+    transform: translate(-50%,-50%);
 }
 .dashboard_page_dashboard .item_widget{
     padding: 0;
@@ -142,10 +169,12 @@
 .bweb-component_page_custom_dashboard .form-table td{
     vertical-align: top;
 }
+
 .bweb-component_page_custom_dashboard .boxwidget{
     flex: auto;
+    cursor: w-resize;
 }
-
+.bweb-component_page_custom_dashboard .item_widget{background-color: #fff;}
 .bweb-component_page_custom_dashboard .item_widget,
 .bweb-component_page_custom_dashboard .item_widget a{
     cursor: move;
