--- a/component/light_theme_admin/b_admin.css
+++ b/component/light_theme_admin/b_admin.css
@@ -61,6 +61,7 @@ body {
   .wp-core-ui .button-secondary {
     color: #3791d3;
     border-color: #3791d3;
+    box-shadow: 0 0 3px rgb(0,0,0,0.3);
   }
   
   .wp-core-ui .button.hover,
@@ -84,6 +85,7 @@ body {
   .wp-core-ui .button:active {
     background: #2b6bc5;
     border-color: #2b6bc5;
+    color: #fff;
   }
   
   .wp-core-ui .button.active,
