--- a/component/custom_dashboard/assets/style.css
+++ b/component/custom_dashboard/assets/style.css
@@ -31,6 +31,7 @@
     background-color: #fff;
     vertical-align: top;
     position: relative;
+    flex: 1;
 }
 #cont_n_col{
     float: right;
@@ -67,15 +68,15 @@
     transition: all 0.1s ease-in-out;
 }
 
-.box_icons-state-accept{
-    width: 25px;
-    height: 25px;
+.bweb-component_page_custom_dashboard .box_icons{
+    border: 2px dashed rgba(26, 205, 6, 0);
+}
+
+.bweb-component_page_custom_dashboard .box_icons-state-accept{
     border: 2px dashed rgb(26, 205, 6);
     display: inline-block;
-    font-size: 28px;
 }
-.box_icons-state-active .box_icons{
-    width: 25px;
+.bweb-component_page_custom_dashboard .box_icons-state-active .box_icons{
     border: 2px dashed rgb(23, 6, 205);
     display: inline-block;
 }
@@ -171,10 +172,6 @@
     vertical-align: top;
 }
 
-.bweb-component_page_custom_dashboard .boxwidget{
-    flex: auto;
-    cursor: w-resize;
-}
 .bweb-component_page_custom_dashboard .item_widget{background-color: #fff;}
 .bweb-component_page_custom_dashboard .item_widget,
 .bweb-component_page_custom_dashboard .item_widget a{
