--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,7 @@
     box-shadow: 0 0 13px rgb(0 0 0 / 20%);
     min-width: 200px;
     justify-content: right;
+    position: relative;
 }
 
 
@@ -40,4 +41,19 @@ label.component_title{cursor: text;}
     height: 26px;
     font-size: 26px;
     margin: 5px;
+}
+.badge{
+    text-decoration: none;
+}
+.badge span {
+    background-color: #48ad10;
+    padding: 3px;
+    border-radius: 100%;
+    color: #fff;
+    font-size: 18px;
+    height: 18px;
+    width: 18px;
+    position: absolute;
+    top: -7px;
+    left: -7px;
 }
