fix bug slider fade

--- a/component/slider_block/assets/css/jquery.bxslider.css
+++ b/component/slider_block/assets/css/jquery.bxslider.css
@@ -9,7 +9,7 @@
 
 .wp-block-bc-slide .wp-block-cover{
   height: 100%;
-  
+  display: flex !important;
 }
 .bx-wrapper, .bx-viewport {
   height: 100% !important; 
