--- a/component/slider_block/render.html
+++ b/component/slider_block/render.html
@@ -34,20 +34,23 @@
     <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
     <script type='text/javascript' src='https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js' id='bcs-bxslider-js-js'></script>
     <script type='text/javascript'>
-        jQuery(function($){
-            $(document).ready(function(){
-                
-                $('.wp-block-bc-slide').bxSlider({
-                    mode: 'horizontal',
-                    adaptiveHeight: true,
-                    infiniteLoop: true,
-                    auto: false,
-                    autoHover: true,
-                    pager: false,
+        runbcslide();
+        function runbcslide(){
+            jQuery(function($){
+                $(document).ready(function(){
+                    
+                    $('.wp-block-bc-slide').bxSlider({
+                        mode: 'horizontal',
+                        adaptiveHeight: true,
+                        infiniteLoop: true,
+                        auto: false,
+                        autoHover: true,
+                        pager: false,
 
-                }).css('visibility','visible');
+                    }).css('visibility','visible');
+                });
             });
-        });
+        }
     </script>
 </body>
 </html>
