--- a/component/theme/assets/css/style.css
+++ b/component/theme/assets/css/style.css
@@ -585,8 +585,8 @@ textarea {
 
 .alignwide {
     width: 100%;
-    padding-right: 0;
-    padding-left: 0;
+    padding-right: 15px;
+    padding-left: 15px;
     margin-right: auto;
     margin-left: auto;
   }
