--- a/component/animsition/assets/animsition.css
+++ b/component/animsition/assets/animsition.css
@@ -18,10 +18,10 @@
  */
 .animsition-overlay-slide {
   position: fixed;
-  z-index: 1;
+  z-index: 999999;
   width: 100%;
   height: 100%;
-  background-color: #ddd;
+  /*background-color: #ddd;*/
 }
 .animsition-overlay-slide.overlay_bottom {
   bottom: 0;
@@ -37,23 +37,23 @@
 /* loading option */
 .animsition-loading,
 .animsition-loading:after {
-  width: 32px;
-  height: 32px;
+  width: 48px;
+  height: 48px;
   position: fixed;
   top: 50%;
   left: 50%;
-  margin-top: -16px;
-  margin-left: -16px;
+  margin-top: -24px;
+  margin-left: -24px;
   border-radius: 50%;
-  z-index: 100;
+  z-index: 9999999;
 }
 
 .animsition-loading {
   background-color: transparent;
-  border-top: 5px solid rgba(0, 0, 0, 0.2);
-  border-right: 5px solid rgba(0, 0, 0, 0.2);
-  border-bottom: 5px solid rgba(0, 0, 0, 0.2);
-  border-left: 5px solid #eee;
+  border-top: 5px solid rgba(0, 0, 0, 0);
+  border-right: 5px solid rgba(0, 0, 0, 0);
+  border-bottom: 5px solid rgba(0, 0, 0, 0);
+  /*border-left: 5px solid #eee;*/
   -webkit-transform: translateZ(0);
           transform: translateZ(0);
   -webkit-animation-iteration-count:infinite;
