--- a/component/slider_block/assets/carousel.css
+++ b/component/slider_block/assets/carousel.css
@@ -100,7 +100,7 @@
     -webkit-box-pack: center;
     -ms-flex-pack: center;
     justify-content: center;
-    width: 15%;
+    width: auto;
     color: #fff;
     text-align: center;
     opacity: 0.5;
