--- a/component/theme/assets/css/style.css
+++ b/component/theme/assets/css/style.css
@@ -893,6 +893,25 @@ img{
     text-align: center;
 }
 
+.dropdown-submenu {
+	position: relative;
+}
+.dropdown-submenu .dropdown-menu {
+	top: 0; left: 95%; margin-top: -1px;
+}
+@media (max-width: 992px)
+{
+	.dropdown-menu {
+		padding: .5rem 0;
+		margin: .125rem 0 0;
+	}
+	li > ul > li > ul > li > .dropdown-item {
+		padding: .25rem 3rem;
+	}
+	li > ul > li > ul > li > .dropdown-item:before {
+		content: '• ';
+	}
+}
 
 @media screen and (min-width: 980px) {
 .woocommerce-shipping-fields h3, .woocommerce-billing-fields h3 {width:100%;}
