--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@
     display: block;
     margin: 10px;
     align-items: center;
-    padding: 10px;
+    padding: 10px 10px 50px 10px;
     background-color: #fff;
     box-shadow: 0 0 13px rgb(0 0 0 / 20%);
     min-width: 200px;
@@ -20,7 +20,7 @@
 
 
 .table_module .form-table tbody tr th{
-    padding: 5px;
+    padding: 5px 0;
     width: 100%;
     font-weight: normal;
     display: block;
@@ -37,6 +37,9 @@
     align-items: center;
     color: #1d2327;
     text-decoration: none;
+    font-weight: 500;
+    border-bottom: 1px solid #ccc;
+    margin-bottom: 20px;
 }
 label.component_title{cursor: text;}
 
@@ -63,14 +66,116 @@ label.component_title{cursor: text;}
     left: -7px;
 }
 .c_descr{
-    position: fixed;
-    display: none;
-    z-index: 999999999;
-    background-color: #fff;
-    box-shadow: 0 0 13px rgb(0 0 0 / 20%);
     padding: 5px;
 }
 
 .table_module .form-table tbody tr:hover .c_descr{
     display: block;
+}
+.btn_compont{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    padding: 10px;
+    width: 100%;
+}
+.slider-checkbox {
+    position: relative;
+  }
+  .slider-checkbox input {
+    margin: 0px;
+    margin-top: 1px;
+    cursor: pointer;
+    opacity: 0;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+    filter: alpha(opacity=0);
+    -moz-opacity: 0;
+    -khtml-opacity: 0;
+    opacity: 0;
+    position: absolute;
+    z-index: 1;
+    top: 0px;
+    left: 0px;
+    background: red;
+    width: 40px;
+    height: 20px;
+  }
+  .slider-checkbox input:checked + .label:before {
+    background-color: #008f1a;
+    font-family: "dashicons";
+    content: "\f147";
+    padding-left: 6px;
+  }
+  .slider-checkbox input:checked + .label:after {
+    left: 21px;
+  }
+  .slider-checkbox .label {
+    position: relative;
+    padding-left: 46px;
+  }
+  .slider-checkbox .label:before, .slider-checkbox .label:after {
+    position: absolute;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+    transition: background-color 0.3s, left 0.3s;
+  }
+  .slider-checkbox .label:before {
+    font-family: "dashicons";
+    content: "\f158";
+    color: #fff;
+    box-sizing: border-box;
+    padding-left: 23px;
+    font-size: 12px;
+    line-height: 20px;
+    background-color: #888;
+    left: 0px;
+    top: 0px;
+    height: 20px;
+    width: 40px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+  }
+  .slider-checkbox .label:after {
+    content: "";
+    letter-spacing: 20px;
+    background: #fff;
+    left: 1px;
+    top: 1px;
+    height: 18px;
+    width: 18px;
+  }
+.btn_delete{
+    text-decoration: none;
+    color: rgb(167, 0, 0) !important;
+    border-color: rgb(167, 0, 0) !important;
+}
+.btn_delete .dashicons{
+    vertical-align: text-bottom;
+}
+.btn_download{
+    text-decoration: none;
+    color: rgb(0, 117, 167);
+}
+.btn_update{
+    text-decoration: none;
+    color: rgb(0, 167, 42);
+}
+.table_module table.form-table+input+input+p.submit, 
+.table_module table.form-table+input+p.submit, 
+.table_module table.form-table+p.submit,
+.btn_top{
+    background-color: #ffffff;
+    padding: 20px;
+    box-shadow: 0 0 13px rgb(0 0 0 / 20%);
+}
+.table_module table.form-table+input+input+p.submit, 
+.table_module table.form-table+input+p.submit, 
+.table_module table.form-table+p.submit{
+    background-color: #ffffff;
+    padding: 20px;
+    box-shadow: 0 0 13px rgb(0 0 0 / 20%);
+    position: sticky;
+    bottom: 0;
 }
